syntax = "proto3";

package od2_network.hive;
option go_package = "go.od2.network/hive/pkg/types";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message ItemLocator {
  string collection = 1;
  string id = 2;
}

message ItemPointer {
  ItemLocator dst = 1;
  google.protobuf.Timestamp timestamp = 2;
  // int64 pipeline = 3;
  // ItemLocator src = 4;
}

enum TaskStatus {
  SUCCESS = 0;
  TIMEOUT = 1;
  CLIENT_FAILURE = 2;
}

message TaskResult {
  ItemLocator item = 1;
  int64 task_id = 2;
  int64 pipeline = 3;
  TaskStatus status = 4;
  google.protobuf.Timestamp finish_time = 5;
  google.protobuf.Duration duration = 6;
}

service Tasks {
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse) {}
}

message GetTasksRequest {
  int32 num_tasks = 1;
}

message GetTasksResponse {
  repeated ItemLocator locators = 1;
}
